whitenose commeting storage staticfiles

--- a/templates/base.html
+++ b/templates/base.html
@@ -360,15 +360,15 @@
 							<h3 class="footerHeader"> Resources </h3>
 							<ul class="list-unstyled">								
 								<li> 
-									<a href="{% url 'About' %}"><i class="fa fa-info-circle">
+									<a href="{% url 'About' %}"><i class="fa fa-info-circle"><br>
 									<span> About</span></i></a> 
 								</li>
 								<li> 
-									<a href="{% url 'TermsAndConditions' %}"><i class="fa fa-handshake-o">
+									<a href="{% url 'TermsAndConditions' %}"><i class="fa fa-handshake-o"><br>
 									<span> Terms of use </span> </i> </a>
 								</li>
 								<li> 
-									<a href="{% url 'PrivacyPolicy' %}"><i class="fa fa-user-secret">
+									<a href="{% url 'PrivacyPolicy' %}"><i class="fa fa-user-secret"><br>
 									<span> Privacy policy </span> </i> </a>
 								</li>
 							</ul>																		
@@ -377,15 +377,15 @@
 							<h3 class="footerHeader"> Follow </h3>
 							<ul class="list-unstyled">								
 								<li>
-									<a href="https://www.twitter.com/ditook1"><i class="fa fa-twitter">
+									<a href="https://www.twitter.com/ditook1"><i class="fa fa-twitter"><br>
 									<span> Twitter </span> </i> </a>
 								</li>
 								<li>
-									<a href="https://www.facebook.com/Ditook-2191029071182331"> <i class="fa fa-facebook"> 
+									<a href="https://www.facebook.com/Ditook-2191029071182331"> <i class="fa fa-facebook"><br> 
 									<span> Facebook </span> </i> </a> 
 								</li>								
 								<li>
-									<a href="https://www.instagram.com/ditookweb"> <i  class="fa fa-instagram">
+									<a href="https://www.instagram.com/ditookweb"> <i  class="fa fa-instagram"><br>
 									<span> Instagram </span> </i> </a>
 								</li>
 							</ul>																		
